--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="author" content="Arvind Thangamani">
-    <meta name="description" content="Yusuke Ishimi&#39;s personal website">
+    <meta name="description" content="Arvind Thangamani&#39;s personal website">
     <meta name="keywords" content="blog,developer,personal">
     
     <meta property="og:site_name" content="Arvind Thangamani">
     <meta property="og:title" content="Arvind Thangamani">
-    <meta property="og:description" content="Yusuke Ishimi&#39;s personal website">
+    <meta property="og:description" content="Arvind Thangamani&#39;s personal website">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://dnivra26.github.io/">
     <meta property="og:image" content="https://dnivra26.github.io/images/tn.png">
